<resources>
    <string name="app_name">indoor-mapper</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="geofence">Geofence</string>
    <string name="welcome_to_your_lecture_room_finder">Welcome to your lecture room finder</string>
    <string name="you_can_start_stop_logging_your_location">You can start/stop logging your location</string>
    <string name="you_can_create_a_geofence_for_a_location">You can create a geofence for a location</string>
    <string name="location_permission_request_title">Permission Required</string>
    <string name="location_permission_request_rationale">Access to coarse location is required for faster first fix.</string>
    <string name="permission_button_accept">Sure</string>
    <string name="permission_button_deny">No</string>
    <string name="location_permission_denied_message">No access to locations. Time to first fix may be severely delayed!</string>
    <string name="geofence_details">Enter a longitude and latitude and click on \'Alert\' to get notified when you\'re close to the location</string>
    <string name="geofence_header">Get notified when you\'re close to a location of your choice</string>
    <string name="geofence_alert">Alert</string>
    <string name="title_activity_geofence_activiy">GeofenceActiviy</string>
    <string name="geo_fence_in_range_message">You\'re in range of your desired location</string>
    <string name="geo_fence_to_be_reached_message">Still to get there</string>
</resources>
