<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_your_lecture_room_finder"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/logHeading"
        android:layout_marginStart="66dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_start_stop_logging_your_location"
        android:id="@+id/logHeading"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/button_log_start" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_create_a_geofence_for_a_location"
        android:id="@+id/fenceHeading"
        android:layout_marginStart="44dp"
        android:layout_marginTop="117dp"
        android:layout_below="@+id/button_log_start"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_log_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="27dp"
        android:onClick="startLogging"
        android:layout_below="@+id/logHeading"
        android:layout_alignEnd="@+id/button_fence" />

    <Button
        android:id="@+id/button_log_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/fenceHeading"
        android:layout_alignTop="@+id/button_log_start"
        android:layout_below="@+id/logHeading"
        android:layout_marginEnd="17dp"
        android:text="@string/stop"
        android:onClick="stopLogging"/>

    <Button
        android:id="@+id/button_fence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence"
        android:onClick="startFencing"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/fenceHeading"
        android:layout_alignStart="@+id/fenceHeading" />


</RelativeLayout>