<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/geofence_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/lbl_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence_details"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/lbl_header"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lbl_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence_header"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/text_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Longitude"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/lbl_details"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/text_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_lng"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Latitude" />

    <Button
        android:id="@+id/button_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geofence_alert"
        android:layout_below="@+id/text_lat"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp" />

    <TextView
        android:id="@+id/txt_info_current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_alert"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@+id/button_alert"
        android:text="Current set location"/>

    <TextView
        android:id="@+id/lbl_current_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="Only shown when we are close"
        android:layout_below="@+id/button_alert"
        android:layout_alignEnd="@+id/text_lat"
        android:layout_marginEnd="11dp" />

</RelativeLayout>